...
      name: "OSM Cycle Topo",
      url: "https://{s}.tile-cyclosm.openstreetmap.fr/cyclosm/{z}/{x}/{y}.png",
      attribution:
        '<a href="https://github.com/cyclosm/cyclosm-cartocss-style/releases" title="CyclOSM - Open Bicycle render">CyclOSM</a> | &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
    },
    {
      name: "Six Maps Topo",
      url: "http://localhost:3001/six/NSW_Topo_Map/MapServer/tile/{z}/{y}/{x}",
      attribution:
        '<a href="https://maps.six.nsw.gov.au/" title="SIX Maps - NSW Map">SIX Maps</a>',
    },
    {
      name: "SIX Maps Base Map",
...
